# s3fs

./: .binstar.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.rst  pytest.ini  release-procedure.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt  versioneer.py
.github/workflows/: ci.yml
ci/: env.yaml
conda.recipe/: README.md  meta.yaml
docs/: environment.yml  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  development.rst  index.rst  install.rst
s3fs/: __init__.py  _version.py  core.py  errors.py  mapping.py  mapwrap.py  utils.py
s3fs/tests/: test_mapping.py  test_mapwrap.py  test_s3fs.py  test_utils.py
s3fs/tests/derived/: s3fs_fixtures.py  s3fs_test.py
