[metadata]
long_description: file: README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = s3fs/_version.py
versionfile_build = s3fs/_version.py
tag_prefix = ""

[flake8]
exclude = __init__.py,versioneer.py,s3fs/tests/
max-line-length = 95
ignore =
    # Extra space in brackets
    E20,
    # Multiple spaces around ","
    E231,E241,
    # Comments
    E26,
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # continuation line under-indented for hanging indent
    E121,
    # continuation line over-indented for hanging indent
    E126,
    # continuation line over-indented for visual indent
    E127,
    # E128 continuation line under-indented for visual indent
    E128,
    # multiple statements on one line (semicolon)
    E702,
    # line break before binary operator
    W503,
    # visually indented line with same indent as next logical line
    E129,
    # unexpected indentation
    E116,
    # redefinition of unused 'loop' from line 10
    F811,
    # local variable is assigned to but never used
    F841,
    # Ambiguous variable names
    E741
    # line break after binary operator
    W504,
    # line too long (leave it to black!)
    E501,
